Another try to fix iOS overflow

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -38,6 +38,11 @@ button:disabled {
   }
 }
 
+#app {
+  width: 100%;
+  height: 100%;
+}
+
 #app-wrapper {
   min-height: 100vh;
   padding-bottom: 171px;
