--- a/src/styles/components/_map-modal.scss
+++ b/src/styles/components/_map-modal.scss
@@ -41,7 +41,3 @@
         color: $accent;
     }
 }
-
-.ReactModal__Body--open, body, #app, html {
-    overflow: hidden;
-}
